# mcp-scicomp

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/mcp_scicomp/: app.py  plotting.py  server.py  utils.py
src/mcp_scicomp/tools/: linalg.py  ode.py  optimization.py  pde.py  probability.py  sde.py  stochastic.py
tests/: test_linalg.py  test_ode.py  test_optimization.py  test_pde.py  test_probability.py  test_sde.py  test_stochastic.py  test_utils.py
